gcc/testsuite/rust/rustc/ui/issues/issue-17444.rs
enum Test {
    Foo = 0
}

fn main() {
    let _x = Test::Foo as *const isize;
// { dg-error ".E0606." "" { target *-*-* } .-1 }
}

